Edited first two sections
Added some information about me as well as some skills. These are subject
to change soon.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<span class="image avatar"><img src="images/andres.echeverria.jpg" alt="" /></span>
+					<h1 id="logo"><a href="#">Andres Echeverria</a></h1>
+					<p>Sophomore studying Computer Science<br />
+					at the University of Michigan</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -52,26 +52,26 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>About Me</h2>
+										<p>I'm a hardworking student with a passion for technology.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I was born and raised in Barranquilla, Colombia. Today, being a college student in the United States has given me the opportunity of pursuing new goals and I am grateful for this. I have been programming for two years and my desire to learn more keeps growing. </p>
+									<p>Currently, I'm the Controls Team Leader for UMIGV, a new club with the goal of building an autonomous vehicle for competition. This has sparked my interest in Autonomous Robotics and I'm excited to see what we can achieve in the near future.
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Skills</h3>
+									<p>My experiences in college, which include participating in Hackathons, Design clubs, and working as a Diversity Peer Educator have given me a wide array of skills over the past two years.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-code">Proficient in C++, MATLAB, and Python</li>
+										<li class="fa-code">Experience using Unity3D</li>
+										<li class="fa-code">Experience using ROS</li>
+										<li class="fa-users">Communication</li>
+										<li class="fa-code">Efficient use of GitHub</li>
+										<li class="fa-book">Profficient in Spanish, English, and French </li>
 									</ul>
 								</div>
 							</section>
@@ -79,7 +79,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
+									<h3>Campus Involvement</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
