Added information on extracurricular activties
Added UMIGV, SHPE, and being a DPE to my Campus Involvement List.
Next I will need to get pictures to go with each activity.

--- a/index.html
+++ b/index.html
@@ -81,27 +81,27 @@
 							<section id="three">
 								<div class="container">
 									<h3>Campus Involvement</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>The following clubs and jobs have developped my leadership and technical skills.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>University of Michigan Intelligent Ground Vehicle</h4>
+												<p>I joined this club at the beggining of my sophomore year and I am now the Controls Team Leader. I've learnt how to create ROS nodes that communicate with each other to handle the robot's processes independently.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Society of Hispanic Professional Engineers</h4>
+												<p>As a member of the LeaderSHPE council I have coordinated events such as Global Bonanza to spread information on Hispanic culture. I've networked with people like me with whom I share similar interests.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Diversity Peer Educator</h4>
+												<p>I try to apply what I've learnt working for housing as a Diversity Peer Educator to my everyday life. I deal with bias incidents on-campus and this has significantly improved my communication skills.</p>
 											</div>
 										</article>
 									</div>
