--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
 									<p>The following clubs and jobs have developped my leadership and technical skills.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/IGV.JPG" alt="" /></a>
 											<div class="inner">
 												<h4>University of Michigan Intelligent Ground Vehicle</h4>
 												<p>I joined this club at the beggining of my sophomore year and I am now the Controls Team Leader. I've learnt how to create ROS nodes that communicate with each other to handle the robot's processes independently.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/SHPE.JPG" alt="" /></a>
 											<div class="inner">
 												<h4>Society of Hispanic Professional Engineers</h4>
 												<p>As a member of the LeaderSHPE council I have coordinated events such as Global Bonanza to spread information on Hispanic culture. I've networked with people like me with whom I share similar interests.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/DPE.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Diversity Peer Educator</h4>
 												<p>I try to apply what I've learnt working for housing as a Diversity Peer Educator to my everyday life. I deal with bias incidents on-campus and this has significantly improved my communication skills.</p>
