Using formspree for contact form

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>I can be reached at andreseg@umich.edu. Feel free to send me an email!</p>
-									<form method="post" action="#">
+									<form method="post" action="https://formspree.io/andreseg@umich.com">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
