--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<header>
 					<span class="image avatar"><img src="images/andres.echeverria.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Andres Echeverria</a></h1>
-					<p>Sophomore studying Computer Science<br />
+					<p>Junior studying Computer Science<br />
 					at the University of Michigan</p>
 				</header>
 				<nav id="nav">
@@ -72,7 +72,7 @@
 										<li class="fa-code">Experience using ROS</li>
 										<li class="fa-users">Communication</li>
 										<li class="fa-code">Efficient use of GitHub</li>
-										<li class="fa-book">Profficient in Spanish, English, and French </li>
+										<li class="fa-book">Proficient in Spanish, English, and French </li>
 									</ul>
 								</div>
 							</section>
