--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 									<h3>Skills</h3>
 									<p>My experiences in college, which include participating in Hackathons, Design clubs, and working as a Diversity Peer Educator have given me a wide array of skills over the past two years.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Proficient in C++, MATLAB, and Python</li>
-										<li class="fa-code">Experience using Unity3D</li>
+										<li class="fa-code">Proficient in C++, Java, and Python</li>
+										<li class="fa-code">Experience using Unity3D and Unreal Engine</li>
 										<li class="fa-code">Experience using ROS</li>
 										<li class="fa-users">Communication</li>
 										<li class="fa-code">Efficient use of GitHub</li>
@@ -84,6 +84,13 @@
 									<p>The following clubs and jobs have developped my leadership and technical skills.</p>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/CROMA.png" alt="" /></a>
+											<div class="inner">
+												<h4>Undergraduate Researcher at CROMA Lab</h4>
+												<p>During my time doing research I've learnt how to approach problems that I've never seen before. I learnt how to use the AirSim API to recreate 3D scenes from video annotations.</p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/IGV.JPG" alt="" /></a>
 											<div class="inner">
 												<h4>University of Michigan Intelligent Ground Vehicle</h4>
@@ -95,13 +102,6 @@
 											<div class="inner">
 												<h4>Society of Hispanic Professional Engineers</h4>
 												<p>As a member of the LeaderSHPE council I have coordinated events such as Global Bonanza to spread information on Hispanic culture. I've networked with people like me with whom I share similar interests.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/DPE.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Diversity Peer Educator</h4>
-												<p>I try to apply what I've learnt working for housing as a Diversity Peer Educator to my everyday life. I deal with bias incidents on-campus and this has significantly improved my communication skills.</p>
 											</div>
 										</article>
 									</div>
