Changed the about me

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<p>I'm a hardworking student with a passion for technology.</p>
 									</header>
 									<p>I was born and raised in Barranquilla, Colombia. Today, being a college student in the United States has given me the opportunity of pursuing new goals and I am grateful for this. I have been programming for two years and my desire to learn more keeps growing. </p>
-									<p>Currently, I'm the Controls Team Leader for UMIGV, a new club with the goal of building an autonomous vehicle for competition. This has sparked my interest in Autonomous Robotics and I'm excited to see what we can achieve in the near future.
+									<p>Currently, I'm spending my summer in Ann Arbor, doing research at the CROMA lab. I'm learning a great deal and I'm excited to keep doing research once the school year resumes.
 								</div>
 							</section>
 
